# secret-santa

./: LICENSE  people.json  secret-santa.cabal  stack.yaml
app/: Main.hs
