name:                secret-santa
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/mkawalec/secret-santa#readme
license:             BSD3
license-file:        LICENSE
author:              Michał Kawalec
maintainer:          michal@monad.cat
copyright:           GPLv3
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable secret-santa-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , text == 1.2.*
                     , containers == 0.5.*
                     , bytestring == 0.10.*
                     , aeson == 1.0.*
                     , random == 1.1
                     , mtl == 2.2.*
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mkawalec/secret-santa
